--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,12 @@
     display:flex;
     flex-wrap:wrap;
 }
-
 .tab li a{
     display: block;
     background: #ddd;
     margin: 0 2px;
     padding: 10px 20px;
 }
-
 .tab li.active a{
     background: #fff;
 }
@@ -31,9 +29,10 @@
     display: none;
     opacity: 0;
     background: #fff;
-    padding: 50px 20px
-}
+    padding: 50px 20px;
 
+ 
+}
 .area.is-active{
     display: block;
     animation-name: displayAnime;
@@ -48,68 +47,40 @@ main{
     justify-content: flex-start;
 }
 .LeftContent{
-    margin-left: 20px;
     display: flex;
     flex-direction: column;
     text-align: center;     
+    position: relative;
+    height: 100%;
 }
 .CenterContent{
-    margin-top: 50px;
     flex-grow: 1;
     -webkit-flex-grow: 1;
-    text-align: center;  
+    text-align: center;     
 }
 .RightContent{
-    margin-right: 20px;
     display: flex;
     flex-direction: column;
     text-align: center; 
+    position: relative;
+    height: 100%;
 }
 
-.img{
-    width: 1px;
+.img img{
+    width: 100%;
     height: auto;
 }
 
-@media screen and (max-width: 430px){
-    model-viewer {
-        width: 20%;
-        height: 10px;
-        background-color: rgb(0, 255, 38);
-        margin: 0 auto;
-        border-radius: 50px;
-    }
-    model-viewer#reveal {
-        --poster-color: transparent;
-    }
-}
-@media screen and (min-width: 431px){
-    model-viewer {
-        width: clamp(5px, 80vw, 500px);
-        height: 400px;
-        background-color: rgb(0, 255, 38);
-        margin: 0 auto;
-        border-radius: 50px;
-    }
-    model-viewer#reveal {
-        --poster-color: transparent;
-    }
+.block{
+    margin-left: 20%;
 }
 
-
-@keyframes displayAnime{
-    from{
-        opacity: 0;
-    }
-    to{
-        opacity: 1;
-    }
-}
-
-
-.button{
-    margin: 5px;
-    width: clamp(100px, 10vw, 3000px);
+.btn button{
+    width: 10vw;
+    height: 5vw;
+    font-size: 5vw;  
+    padding: 2px;
+    margin: 10px auto;
 }
 
 .btn-border {
@@ -124,8 +95,45 @@ a.btn-border:hover {
     background: #000;
 }
 
-
-
 body {
     font-family: "Noto Serif JP", serif;
  }
+
+@media screen and (max-width: 430px){
+    model-viewer {
+        
+        background-color: rgb(0, 255, 38);
+        width: 80vw;
+        height: 100vw;
+
+        margin:0 auto;
+
+        border-radius: 20px;
+
+        z-index: 1;
+    }
+    model-viewer#reveal {
+        --poster-color: transparent;
+    }
+}
+@media screen and (min-width: 431px){
+    model-viewer {
+        width: 90%;
+        height: 400px;
+        background-color: rgb(0, 255, 38);
+        margin: 0 auto;
+        border-radius: 50px;
+    }
+    model-viewer#reveal {
+        --poster-color: transparent;
+    }
+}
+
+@keyframes displayAnime{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
